[package]
name = "kosync"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "synchronization service for koreader devices"

[dependencies]
argh = "0.1"
chrono = "0.4"
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
redis = { version = "0.27", features = ["tokio-comp"] }
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
